--- a/notes/sololearn data science note.ipynb
+++ b/notes/sololearn data science note.ipynb
@@ -1048,7 +1048,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To count how many elements satisfy the condion, use .sum() for the resultant array"
+    "To count how many elements satisfy the condition, use .sum() for the resultant array"
    ]
   },
   {
@@ -1180,6 +1180,132 @@
     "mask = (height_age_arr[:, 0]>=182) & (height_age_arr[:,1]<=50)\n",
     "\n",
     "print(height_age_arr[mask,])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pandas \n",
+    "Pandas is built on numpy\n",
+    "### Series\n",
+    "Series is a 1d array that can hold any type of data. The axis labels are called index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a    1\n",
+      "b    2\n",
+      "c    3\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "print(pd.Series([1, 2, 3], index=['a', 'b', 'c'])) # with index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The values can be a numpy array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a    1\n",
+      "b    2\n",
+      "c    3\n",
+      "dtype: int32\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "print(pd.Series(np.array([1, 2, 3]), index=['a', 'b', 'c'])) # from a 1darray"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also use a dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a    1\n",
+      "b    2\n",
+      "c    3\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "print(pd.Series({'a': 1, 'b': 2, 'c':3})) # from a dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Default indexes starts from 0. We can access data using index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "series = pd.Series({'a': 1, 'b': 2, 'c':3})\n",
+    "print(series['a'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pandas DataFrames - Shape and Size\n",
+    "To get dimensions of a dataframe use .shape"
    ]
   }
  ],
