--- a/notes/sololearn data science note.ipynb
+++ b/notes/sololearn data science note.ipynb
@@ -7311,6 +7311,84 @@
     "knn_final.predict(new_data)\n",
     "print(knn_final.predict_proba(new_data))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clustering\n",
+    "This is a type of unsupervised learning used to find groups of similar objects. This is used when labels are missing. Mainly, there are 4 types of clustering algorithms. \n",
+    "- Centroid based models: Each cluster is represented by a single mean vector (Ex: k-means)\n",
+    "- Connectivity based models: Built based on distance connectivity (Ex: hierarchical clustering)\n",
+    "- Distribution based models: Built using statistical distributions (Ex: Gaussian mixtures)\n",
+    "- Density based models: Clusters are defined as dense areas (Ex: DBSCAN)<br>\n",
+    "Here, we'll explore k-means clustering algorithm<br>\n",
+    "For more details: https://scikit-learn.org/stable/modules/clustering.html#overview-of-clustering-methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### K-means\n",
+    "This is the most popular clustering algorithm. We assume there are n data points. \n",
+    "- Step 1: Initialization - Pick k random points as cluster centers, called centroids\n",
+    "- Step 2: Cluster Assignment - Assign each data point to its nearest centroid based on its distance to each centroid, and that forms k clusters\n",
+    "- Step 3: Centroid Updating - For each new cluster, calculate its centroid by taking the average of all the points assigned to the cluster\n",
+    "- Step 4: Repeat steps 2 and 3 until none of cluster assignments change, or it reaches the maximum number of iterations<br>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Distance Metric\n",
+    "Use euclidean distance method to calculate the distance in k-means algorithm. <br>\n",
+    "Euclidean distance = sqrt(x^2 + y^2)<br>\n",
+    "We can also use numpy for that"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.23606797749979\n",
+      "2.23606797749979\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x1 = np.array([0, 1])\n",
+    "x2 = np.array([2, 0])\n",
+    "\n",
+    "print(np.sqrt(((x1-x2)**2).sum()))\n",
+    "# 2.23606797749979\n",
+    "\n",
+    "print(np.sqrt(5))\n",
+    "# 2.23606797749979"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are other distance metrics, such as Manhattan distance, cosine distance, etc. The choice of the distance metric depends on the data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Wine Data\n"
+   ]
   }
  ],
  "metadata": {
